infra/k8s/posts-depl.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas : 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
      - image: alifhossain/posts:latest
        name: posts
        env :
          - name: POSTGRES_USER
            valueFrom : 
              secretKeyRef :
                name : postgres
                key : POSTGRES_USER
          - name: POSTGRES_PASSWORD
            valueFrom : 
              secretKeyRef :
                name : postgres
                key : POSTGRES_PASSWORD
          - name: DATABASE_URL
            valueFrom : 
              secretKeyRef :
                name : posts-db2
                key : DATABASE_URL
          - name: SALT
            valueFrom : 
              secretKeyRef :
                name : auth
                key : SALT
          - name: JWT_SECRET
            valueFrom : 
              secretKeyRef :
                name : token
                key : JWT_SECRET
        
---
apiVersion : v1
kind : Service
metadata:
  name : posts-srv
spec :
  selector :
    app : posts
  ports :
    - name: posts
      protocol : TCP
      port : 3000
      targetPort : 3000
