infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-blog

spec:
  ingressClassName: nginx
  rules:
    - host: okay.blogs.com
      http:
        paths:
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: authentication-srv
                port : 
                  number: 3000
          - path: /api/v1/posts
            pathType: Prefix
            backend:
              service:
                name: posts-srv
                port : 
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
